Update documentation files

--- a/Quickstart: ship your first app.mdx
+++ b/Quickstart: ship your first app.mdx
@@ -19,7 +19,7 @@ LaunchPulse works like a small product team made of AI agents: Product, UX, Fron
 
 <CardGroup cols={3}>
   <Card title="Full-stack applications">
-    Frontend, backend, and database generated in one coordinated project — not three separate tools.
+    Frontend, backend, and database generated in one coordinated project - not three separate tools.
   </Card>
   <Card title="Web apps you can publish">
     Launch live web platforms, connect domains, and share a URL the same day the app is generated.
@@ -47,7 +47,7 @@ You describe the product once. The agents do the heavy lifting.
 ## Step 1 – Describe your idea
 
 From the homepage, start by typing what you want to build in natural language.  
-There’s no hard limit on detail — the more context you give, the better the result.
+There’s no hard limit on detail - the more context you give, the better the result.
 
 <Steps>
   <Step title="Write your product brief">
@@ -98,7 +98,7 @@ This is where you’ll see your app getting generated live.
   </Step>
 
   <Step title="Explore the structure view">
-    In the main panel, the **Structure** tab shows your agent graph — how each agent fits into the pipeline for this project.
+    In the main panel, the **Structure** tab shows your agent graph - how each agent fits into the pipeline for this project.
 
     You can use this to understand:
 
