--- a/accounts-and-subscriptions.mdx
+++ b/accounts-and-subscriptions.mdx
@@ -5,7 +5,7 @@ title: "Manage your plan"
 
 # Accounts & Subscriptions
 
-LaunchPulse keeps pricing simple: one powerful plan designed to take you from idea to a fully working product that can get real users the same day — with more plan options coming soon.
+LaunchPulse keeps pricing simple: one powerful plan designed to take you from idea to a fully working product that can get real users the same day with more plan options coming soon.
 
 <Info>
   Right now, LaunchPulse offers a single **Premium** plan, plus optional add-ons for extra projects and iterations.
@@ -22,7 +22,7 @@ The **Premium** plan currently includes:
     Build and iterate production-ready web apps using the full multi-agent system.
   </Card>
   <Card title="1 Full-Featured Project">
-    A fully functional, live, full-stack web application — business-ready, not a prototype.
+    A fully functional, live, full-stack web application and business-ready, not a prototype.
   </Card>
   <Card title="15 Chat Iterations">
     Up to 15 major build/iteration cycles with the LaunchPulse Agent for that project.
@@ -57,7 +57,7 @@ The **Premium** plan currently includes:
 
 ## What is a “Full-Featured Project”?
 
-A **Full-Featured Project** in LaunchPulse is more than a template — it’s a complete, live product:
+A **Full-Featured Project** in LaunchPulse is more than a template and it’s a complete, live product:
 
 - A **full-stack web application** (frontend + backend + database).
 - **Production-ready**, so you can onboard your first real users within the same day.
