--- a/projects.mdx
+++ b/projects.mdx
@@ -6,7 +6,7 @@ description: View, create, and manage all of your LaunchPulse apps from the Proj
 # Projects
 
 The **Projects** view is your home base in LaunchPulse.  
-Every card on this page is a separate, full LaunchPulse app — with its own agents, database, and deployment.
+Every card on this page is a separate, full LaunchPulse app - with its own agents, database, and deployment.
 
 <Info>
 Use the Projects hub to switch between apps, check remaining usage, and spin up new builds.
