--- a/troubleshooting.mdx
+++ b/troubleshooting.mdx
@@ -14,7 +14,7 @@ LaunchPulse combines the speed of vibe coding with guardrails that catch a lot o
     Each chat iteration preserves state and shows a diff, so you can see what changed and revert if needed.
   </Card>
   <Card title="Scalable infrastructure">
-    Databases and hosting are designed to grow with your user base, so you can focus on fixing product issues — not servers.
+    Databases and hosting are designed to grow with your user base, so you can focus on fixing product issues - not servers.
   </Card>
 </CardGroup>
 
@@ -68,7 +68,7 @@ Most issues fall into a few buckets:
 
     - Follow the same steps your users took.
     - Note the exact page, action, and any error message.
-    - Let the browser agent run the flow as well — it can surface hidden console errors and crashes.
+    - Let the browser agent run the flow as well - it can surface hidden console errors and crashes.
   </Step>
   <Step title="2. Inspect logs & errors">
     Check what the app is telling you:
@@ -214,7 +214,7 @@ Most issues fall into a few buckets:
     Keep track of what each iteration changes. Use diffs and history to roll back if a change introduces new problems.
   </Card>
   <Card title="Design with constraints">
-    Ask for simpler flows and fewer steps when in doubt — complexity breeds bugs and UX issues.
+    Ask for simpler flows and fewer steps when in doubt - complexity breeds bugs and UX issues.
   </Card>
 </CardGroup>
 
@@ -239,7 +239,7 @@ This context helps support (and future you) pinpoint what’s going on.
 
 ## Keep the speed, keep the quality
 
-Vibe coding unlocks rapid prototyping and removes a lot of boilerplate — but it also introduces risks like:
+Vibe coding unlocks rapid prototyping and removes a lot of boilerplate - but it also introduces risks like:
 
 - Security vulnerabilities
 - Maintainability challenges
