Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,9 +3,7 @@ title: "Introduction to LaunchPulse"
 description: "LaunchPulse is your AI software team in the browser. "
 ---
 
-<Frame>
-  <img src="/images/Screenshot2025-11-14at21.04.48.png" alt="LaunchPulse Overview" />
-</Frame>
+![Screenshot2025 11 14at21 04 48 Pn](/images/Screenshot2025-11-14at21.04.48.png)
 
 Instead of hiring a full dev team or wrestling with code yourself, you describe the software you want and LaunchPulse’s multi-agent system plans, builds, tests, and deploys a full-stack web application that’s ready for real users.
 
@@ -24,50 +22,6 @@ Behind the scenes, a team of specialised AI agents work together like a digital 
 
 You stay in natural language. LaunchPulse handles the code, architecture, and deployment.
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
+<Card title="Start here" icon="rocket" horizontal={false} href="/launchpulse.ai">
   
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
 </Card>
